--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
         .video-background {
             position: fixed;
-            top: 0;
-            left: 0;
+            top: 50%;
+            left: 50%;
             min-width: 100%;
             min-height: 100%;
             width: auto;
@@ -32,6 +32,7 @@
             z-index: -1;
             object-fit: cover;
             filter: brightness(0.7);
+            transform: translate(-50%, -50%);
         }
 
 
