fixed white area maybe 2

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
             font-family: 'Inter', sans-serif;
             line-height: 1.8;
             transition: transform 0.6s ease-in-out;
-            overflow-y: auto;
+            overflow: hidden;
             max-height: 80vh;
-            touch-action: pan-y;
+            touch-action: none;
         }
 
         .about-section.slide-down {
@@ -168,9 +168,9 @@
             color: white;
             font-family: 'Inter', sans-serif;
             transition: transform 0.6s ease-in-out;
-            overflow-y: auto;
+            overflow: hidden;
             max-height: 85vh;
-            touch-action: pan-y;
+            touch-action: none;
         }
 
         .application-section.slide-up {
