--- a/index.html
+++ b/index.html
@@ -146,9 +146,11 @@
             font-family: 'Inter', sans-serif;
             line-height: 1.8;
             transition: transform 0.6s ease-in-out;
-            overflow: hidden;
+            overflow-y: auto;
             max-height: 80vh;
-            touch-action: none;
+            touch-action: pan-y;
+            background: rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(10px);
         }
 
         .about-section.slide-down {
@@ -168,9 +170,11 @@
             color: white;
             font-family: 'Inter', sans-serif;
             transition: transform 0.6s ease-in-out;
-            overflow: hidden;
+            overflow-y: auto;
             max-height: 85vh;
-            touch-action: none;
+            touch-action: pan-y;
+            background: rgba(0, 0, 0, 0.1);
+            backdrop-filter: blur(10px);
         }
 
         .application-section.slide-up {
