--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
             overflow-y: auto;
             max-height: 80vh;
             touch-action: pan-y;
-            background: rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(10px);
+            background: transparent;
         }
 
         .about-section.slide-down {
@@ -173,8 +172,7 @@
             overflow-y: auto;
             max-height: 85vh;
             touch-action: pan-y;
-            background: rgba(0, 0, 0, 0.1);
-            backdrop-filter: blur(10px);
+            background: transparent;
         }
 
         .application-section.slide-up {
