fixed button not showing

--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
             letter-spacing: 1px;
             backdrop-filter: blur(10px);
             margin-top: 20px;
+            margin-bottom: 60px;
             align-self: center;
         }
 
