--- a/index.html
+++ b/index.html
@@ -501,8 +501,8 @@
             submitBtn.textContent = 'Submitting...';
             submitBtn.disabled = true;
             
-            // Collect form data
-            const formData = new FormData();
+            // Collect form data as URL-encoded string
+            const formData = new URLSearchParams();
             formData.append('fullName', document.getElementById('fullName').value);
             formData.append('email', document.getElementById('email').value);
             formData.append('age', document.getElementById('age').value);
@@ -513,8 +513,11 @@
             formData.append('smallIssue', document.getElementById('smallIssue').value);
             
             // Submit to Google Apps Script
-            fetch('https://script.google.com/macros/s/AKfycbypmkC9ycZXfxo7vP9c_uRo8vtfFATPbremcoKTYDq5WAYkk-f2BUSFaEmHJzhLTETb/exec', {
+            fetch('https://script.google.com/macros/s/AKfycbxyESl7JLvvrFp9zW0bfR34sIprHQ5pWAyv9VCXVBrdDOujRFX6sYAAnj0YzBH5vFdt/exec', {
                 method: 'POST',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded',
+                },
                 body: formData
             })
             .then(response => response.json())
